tests/pp-fail/missing_endif.fl.0.exp
Error: missing_endif.fl(1,5): Unexpected end of token stream
\if true
    ^    
